# w4111-proj

./: pyproject.toml  server.py  server1.py
static/: style.css
templates/: admin.html  base.html  event_profile.html  hub.html  index.html  index_example.html  login.html  org_profile.html  page_template.html
